Letting go of Modifier keys will break Tweak Events #89989

Closed
opened 2021-07-20 14:28:35 +02:00 by Julien Kaspar · 5 comments
Member

System Information
Operating system: Linux-5.4.0-77-generic-x86_64-with-glibc2.31 64 Bits
Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.80

Blender Version
Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-20 05:06, hash: d218ba8009

Short description of error
This is an issue that becomes notable when having a high pixel value in the Drag Threshold (Mouse or Pen) or when working generally very fast.

If you hold a modifier key and click & drag you can execute different operators from a regular click & drag.
For example if you hold Shift and click & drag the axis of a Move Gizmo it will move along a plane instead of the axis.
The issue is that if the modifier key is let go before the drag threshold is reached, the click is cancelled even though the click & drag is still happening.

For the user it is far more comfortable to let go of the modifier key immediately after clicking.
This common behaviour leads to operators not being executed unexpectedly.

Exact steps for others to reproduce the error

  • Set the Move Tool to be active or enable the Move Gizmo
  • Hold Shift and Click & Drag any of the colored axes
  • Let go of Shift before the drag threshold is reached

2021-07-20 14-14-38.mp4

**System Information** Operating system: Linux-5.4.0-77-generic-x86_64-with-glibc2.31 64 Bits Graphics card: Quadro GP100/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 460.80 **Blender Version** Broken: version: 3.0.0 Alpha, branch: master, commit date: 2021-07-20 05:06, hash: `d218ba8009` **Short description of error** This is an issue that becomes notable when having a high pixel value in the Drag Threshold (Mouse or Pen) or when working generally very fast. If you hold a modifier key and click & drag you can execute different operators from a regular click & drag. For example if you hold Shift and click & drag the axis of a Move Gizmo it will move along a plane instead of the axis. The issue is that if the modifier key is let go before the drag threshold is reached, the click is cancelled even though the click & drag is still happening. For the user it is far more comfortable to let go of the modifier key immediately after clicking. This common behaviour leads to operators not being executed unexpectedly. **Exact steps for others to reproduce the error** - Set the Move Tool to be active or enable the Move Gizmo - Hold Shift and Click & Drag any of the colored axes - Let go of Shift before the drag threshold is reached [2021-07-20 14-14-38.mp4](https://archive.blender.org/developer/F10229859/2021-07-20_14-14-38.mp4)
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar
Author
Member

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Campbell Barton was assigned by Julien Kaspar 2021-12-03 14:10:18 +01:00

This issue was referenced by db4313610c

This issue was referenced by db4313610cab18933c1b1b1348720ea241b9d91e

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#89989
No description provided.